fix: streamline Hubspot widget visibility handling and improve cleanup logic in Help component

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -980,12 +980,10 @@ p a {
   z-index: 999 !important;
 }
 
-#hubspot-conversations-iframe.visible-icon,
 #hubspot-messages-iframe-container.visible-icon iframe,
 #hubspot-messages-iframe-container .visible-icon {
   display: none !important;
 }
-#hubspot-conversations-iframe.visible-icon,
 #hubspot-messages-iframe-container.visible-icon,
 #hubspot-messages-iframe-container .visible-icon {
   position: inherit !important;
